# mining_sim

./: .gitignore  CMakeLists.txt  README.md
include/: kaz_mining.h  kaz_sort.h  mining_sim.h
include/geometry/: block.h  drawer.h  finger.h  model_block.h  polygon.h  polyline.h
include/planner/: plan.h
scripts/: BaseDatos.py  rowindex.py
src/: CMakeLists.txt  kaz_mining.cpp  kaz_sort.cpp  mining_sim.cpp
tests/: CMakeLists.txt  test_mining.cpp  test_parquet_arrow.cpp  test_parquet_duckdb.cpp  test_release1.cpp  test_sort.cpp  test_sqlite_duckdb.cpp  test_sqlite_sqlitecpp.cpp
